Fix alignment and sizing of win dialog

--- a/src/app/win-dialog/win-dialog.component.scss
+++ b/src/app/win-dialog/win-dialog.component.scss
@@ -1,12 +1,15 @@
 :host {
-    background: #fdf2de;
-    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    width: 100%;
+    height: 100%;
+    
     .content {
+        display: flex;
         flex: 1;
+        justify-content: center;
+        overflow: hidden;
     }
 
     .certificate {
